--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@ a:hover {
 #right {
 	width: auto;
 }
+.right{
+    float:right;
+	font-size:150%;
+}
 
 .content {
 	background-color: lightblue;
