--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
 	-o-background-size: cover;
 	background-size: cover;
 }
-
 .formContainer {
 	margin-left:20%;
 	margin-right:20%;
@@ -25,24 +24,20 @@ body {
     clear: both;
 	margin-bottom:20px;
 }
-
 h1, h3 {
 	margin-top: auto;
 	padding: 6px 3px 0px 3px; 
 	color: magenta;
     border-radius: 5px;
 }
-
 a:hover {
 	color: #920072
 }
-
 #left {
 	float: left;
 	min-width: 270px;
 	width: 30%;
 }
-
 #right {
 	width: auto;
 }
@@ -55,8 +50,50 @@ a:hover {
 	background-color: lightblue;
 	padding: 10px;
 }
+table {
+	border: 1px solid black;
+	width: 100%;
+	background-color:white;
+}
+th,td {
+border: 1px solid black;
+}
 
-@media (max-width: 767px) {
+@media (max-width: 1200px) {
+	 .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+		top: 0;
+		border-width: 0 0 1px;
+	}
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+		margin-top: 7.5px;
+	}
+	.navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+  		display:block !important;
+	}
 	#left {
 		float: none;
 		width: auto;
