--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
 	-o-background-size: cover;
 	background-size: cover;
 }
+
 .formContainer {
 	margin-left:20%;
 	margin-right:20%;
@@ -45,10 +46,12 @@ a:hover {
     float:right;
 	font-size:150%;
 }
-
+.container{
+background-color: #F8F8F8;
+}
 .content {
 	background-color: lightblue;
-	padding: 10px;
+	margin: 10px;
 }
 table {
 	border: 1px solid black;
