--- a/style.css
+++ b/style.css
@@ -49,8 +49,17 @@ a:hover {
 .container{
 background-color: #F8F8F8;
 }
+.content ul,li{
+list-style: none
+}
 .content {
 	background-color: lightblue;
+	margin: 10px;
+	list-style-type:none;
+}
+
+.kidComment {
+	background-color: red;
 	margin: 10px;
 }
 table {
